Simplify usage of java.nio.file.Path